--- a/reportReferences.bib
+++ b/reportReferences.bib
@@ -110,3 +110,9 @@
 	title = "Introduction to Algorithms",
 	year = 2001
 	}
+	
+@ARTICLE{rees,
+	author = "Phil Rees",
+	year = 2001,
+	url = "http://www.philrees.co.uk/articles/midimode.htm"
+	}
